--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:               My digital garden
+title:               Snowy Epistles
 include:             ['_pages']
 
 permalink:           pretty
