--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,8 +1,8 @@
-- title:      more
-  url:        /readme
+- title:      about
+  url:        /about
 
-- title:      uncopyright
-  url:        /uncopyright
+- title:      on digital gardens
+  url:        /Digital Garden TOS
 
-- title:      less
-  url:        /less
+- title:      booklist
+  url:        /booklist
