--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,11 +1,11 @@
 - title:      about
-  url:        snowyepistles.github.io/_pages/about
+  url:        http://snowyepistles.github.io/_pages/about
 
 - title:      on digital gardens
-  url:        snowyepistles.github.io/_pages/Digital Garden TOS
+  url:        http://snowyepistles.github.io/_pages/Digital Garden TOS.md
 
 - title:      booklist
-  url:        snowyepistles.github.io/_pages/booklist
+  url:        http://snowyepistles.github.io/_pages/booklist
   
 - title:      theme
-  url:        snowyepistles.github.io/_pages/theme credit
+  url:        http://snowyepistles.github.io/_pages/theme credit
