--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,11 +1,11 @@
 - title:      about
-  url:        /_pages/about
+  url:        /about
 
 - title:      on digital gardens
-  url:        /_pages/Digital Garden TOS.md
+  url:        /Digital Garden TOS.md
 
 - title:      booklist
-  url:        /_pages/booklist
+  url:        /booklist
   
 - title:      theme
-  url:        /_pages/theme credit
+  url:        /theme credit
