--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -2,10 +2,10 @@
   url:        /about
 
 - title:      on digital gardens
-  url:        /Digital Garden TOS.md
+  url:        /_pages/Digital Garden TOS.md
 
 - title:      booklist
-  url:        /booklist
+  url:        /_pages/booklist
   
 - title:      theme
-  url:        /theme credit
+  url:        /_pages/theme credit
