--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -2,7 +2,7 @@
   url:        /about
 
 - title:      on digital gardens
-  url:        /_pages/Digital Garden TOS.md
+  url:        /_pages/Digital Garden TOS
 
 - title:      booklist
   url:        /_pages/booklist
