--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Snowy Epistles a digital garden # name of the site
 author: Snowy Epistles # name of site's author
 email: snowyepistles@gmail.com # email of site's author
 url: https:// www.snowyepistles.com # root address of the site
-baseurl: "/snowyepistles.github.io" # subpath of the site, e.g. "/blog"
+baseurl: /  # subpath of the site, e.g. "/blog"
 description: > # description of the site (multiple lines allowed)
   A growing digital garden.
 
