--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -4,9 +4,9 @@
 entries:
   - title: info
     entries:
-      - title: a (nearly) no-CSS, fast, minimalist Jekyll theme.
-      - title: github repo
-        url: https://github.com/riggraz/no-style-please
+      - title: 
+      - title: tumblr
+        url: https://snowyepistles.tumblr.com
       - title: "used by <a href='https://riggraz.dev'>riggraz.dev</a> and <a href='https://github.com/riggraz/no-style-please/network/dependents'>many others</a>"
 
   - title: all posts
@@ -18,21 +18,21 @@ entries:
 
   - title: posts by category
     post_list:
-      category: example2
+      category: booklist
       show_more: true
       show_more_text: See more posts...
-      show_more_url: example2-archive.html
+      show_more_url: booklist-archive.html
 
-  - title: rss
-    url: feed.xml
+  - title: 
+    url: 
   
-  - title: another list
+  - title: 
     entries:
-      - title: with subitems
+      - title: 
         entries:
-          - title: with subsubitems
-          - title: example page
-            url: about
-  - title: PRO TIP
+          - title: 
+          - title: 
+            url: 
+  - title: 
     entries:
-      - title: to edit this menu, edit _data/menu.yml file
+      - title: 
