--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -7,5 +7,5 @@
 - title:      booklist
   url:        /_pages/booklist
   
-- title:      theme
-  url:        /_pages/theme credit
+- title:      
+  url:        /
